Fixed issue with unknown keys not serializing consistently as known keys which caused crashes, the app can now no longer be refreshed in release builds which prevents sync issues between frontend and backend, added a background for consistency in case dark mode is enabled in the OS

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+body {
+  background: whitesmoke;
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
